# memora

./: .env.example  .gitignore  LICENSE  README.md  memora  pyproject.toml  vla
.github/workflows/: ci-package.yml  publish-pypi.yml  publish-testpypi.yml
core/: master_memory.md
engine/: codex_runner.py  memory_manager.py  session_manager.py  supabase_sync.py  tmux_manager.py
sql/: supabase_schema.sql
src/memora/: __init__.py  bootstrap.py  cli.py  session_manager.py  settings.py  supabase_sync.py  tmux_manager.py  workspace.py
